--- a/css/style.css
+++ b/css/style.css
@@ -63,11 +63,14 @@ body {
 header {
      height: 20em;
      width: 100%;
-     padding: 4% 44%;
      background-image: url("../img/pixelsoffury.png");
      background-repeat: no-repeat;
      background-size: 100%;
      background-position: center;
+}
+
+header img {
+     padding: 4% 44%;
 }
 
 .standardLayout {
@@ -76,11 +79,56 @@ header {
      padding: 2em 18%;
 }
 
+nav {
+     text-align: center;
+     height: auto;
+     padding: 1em;
+     background-color: #250670;
+     width: 100%;
+     border-bottom: 5px solid rgba(51,217,194,0.8);
+     z-index: 1000;
+}
+
+nav a {
+     text-decoration: none;
+     text-transform: uppercase;
+     padding: 0 1em;
+     color: white;
+}
+
+nav a:hover {
+     color: rgba(51,217,194,1);
+}
+
+nav a:last-child {
+     padding-right: 0;
+}
+
+.stickytop {
+    position: fixed;
+    top: 0;
+}
+
 .footer {
      background-color: #250670;
      color: white;
      padding: .3rem 18%;
      font-size: .8em;
+}
+
+#backToTop {
+     display: none;
+}
+
+#backToTop a {
+     text-decoration: none;
+     text-transform: uppercase;
+     position: fixed;
+     bottom: 2em;
+     margin-left: 90%;
+     background-color: rgba(51,217,194,0.5);
+     color: white;
+     padding: 1em;
 }
 
 /******************************************
@@ -111,13 +159,14 @@ h2 {
      color: white;
 }
 
-h3 {
+h3, label {
      font-weight: 700;
      font-size: 1em;
      text-align: center;
      text-transform: uppercase;
      margin-top: 0;
      margin-bottom: 2em;
+     letter-spacing: .5px;
 }
 
 
@@ -340,24 +389,36 @@ form {
      margin-right: 20%;
 }
 
-.contact input, textarea {
+input, textarea {
      height: 2em;
      border: none;
      border-radius: .2em;
+     padding: 2%;
 }
 
-.contact .name, .email {
-     width: 49%;     
-     float: left;
+input {
+     width: 100%;
 }
 
-.contact textarea {
+textarea {
      width: 100%;
      height: 4em;
+     margin-bottom: 2em;
 }
 
-.contact .button {
+.name, .email {
+     float: left;
+     margin-bottom: 1em;
+     width: 49%;
+}
+
+.name {
+     margin-right: 2%;
+}
+
+#submitButton {
      font-size: 16px;
      line-height: 1.4;
      font-family: 'PT Sans Narrow', sans-serif;
+     margin: 0 37% 0 37%;
 }
