--- a/css/style.css
+++ b/css/style.css
@@ -77,27 +77,52 @@ header {
      padding: 2em 18%;
 }
 
+/******************************************
+/* NAVIGATION                  
+/*******************************************/
+
 nav {
-     text-align: center;
-     height: auto;
-     padding: 1em;
+     height: 3.5em;
      background-color: #250670;
      width: 100%;
      border-bottom: 5px solid rgba(51,217,194,0.8);
      z-index: 1000;
 }
 
-nav a {
+nav ul {
+     margin: auto;
+}
+
+nav li:not(.subNav) {
+     text-align: center;
+     height: auto;
+     width: 11em;
+     float: left;
+     padding: 1em;
+}
+
+nav li a:not(.subNav) {
      text-decoration: none;
      text-transform: uppercase;
-     padding: 0 1em;
+     padding: 1.1em 1em;
      color: white;
 }
 
 nav a:hover {
      color: rgba(51,217,194,1);
      background-color: rgba(255,255,255,.2);
-     padding: 1.1em 1em;
+}
+
+.subNav a {
+     display: none;
+}
+
+.topNav:hover .subNav a {
+     display: block;
+     background-color: #250670;
+     margin: 0;
+     margin-bottom: .2em;
+     padding: 0;
 }
 
 .anchor {
@@ -110,28 +135,6 @@ nav a:hover {
 .stickytop {
     position: fixed;
     top: 0;
-}
-
-.footer {
-     background-color: #250670;
-     color: white;
-     padding: .3rem 18%;
-     font-size: .8em;
-}
-
-#backToTop {
-     display: none;
-}
-
-#backToTop a {
-     text-decoration: none;
-     text-transform: uppercase;
-     position: fixed;
-     bottom: 2em;
-     margin-left: 90%;
-     background-color: rgba(51,217,194,0.5);
-     color: white;
-     padding: 1em;
 }
 
 /******************************************
@@ -461,4 +464,30 @@ textarea {
      line-height: 1.4;
      font-family: 'PT Sans Narrow', sans-serif;
      margin: 0 37% 0 37%;
+}
+
+/******************************************
+/* FOOTER                  
+/*******************************************/
+
+.footer {
+     background-color: #250670;
+     color: white;
+     padding: .3rem 18%;
+     font-size: .8em;
+}
+
+#backToTop {
+     display: none;
+}
+
+#backToTop a {
+     text-decoration: none;
+     text-transform: uppercase;
+     position: fixed;
+     bottom: 2em;
+     margin-left: 90%;
+     background-color: rgba(51,217,194,0.5);
+     color: white;
+     padding: 1em;
 }
