Added Button Hover

--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ Designer in Boston
 body {
      color: #000;
      font-size: 16px;
+     font-size: 1rem;
      line-height: 1.4;
      font-family: 'PT Sans Narrow', sans-serif;
 }
@@ -216,6 +217,10 @@ h3, label {
      border-radius: .2em;
 }
 
+a {
+    text-decoration: none;
+}
+
 .button {
      text-transform: uppercase;
      text-align: center;
@@ -224,6 +229,10 @@ h3, label {
      height: 1.5em;
      margin: auto;
      margin-top: 2em;
+}
+
+.button:hover {
+    background-color:rgba(51,217,194,1);
 }
 
 .intro .button {
@@ -443,7 +452,7 @@ h3, label {
 
 .testimonials .arrow:last-of-type {
     margin-top: -266px;
-    margin-left: 875px;
+    margin-left: 877px;
 }
 
 .testimonials img:not(.arrow) {
@@ -562,4 +571,12 @@ textarea {
      background-color: rgba(51,217,194,0.5);
      color: white;
      padding: 1em;
+}
+
+/******************************************
+/* MOBILE RESPONSIVE                  
+/*******************************************/
+
+@media (min-width: 320px) and (max-width: 640px) {
+
 }
